[project]
name = "solar-mcp"
version = "0.1.1"
description = "MCP server for solar indices and space weather — SFI, SSN, Kp, DSCOVR, alerts"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Greg Beam, KI7MT"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
]
keywords = [
    "amateur-radio", "ham-radio", "solar", "space-weather", "sfi", "kp-index",
    "mcp", "model-context-protocol", "noaa", "dscovr", "propagation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Ham Radio",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://qso-graph.io/"
Repository = "https://github.com/qso-graph/solar-mcp"
Issues = "https://github.com/qso-graph/solar-mcp/issues"

[project.scripts]
solar-mcp = "solar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solar_mcp"]
